# CPAI

./: .env.example  .gitignore  DEMO_GUIDE.md  README.md  VERCEL_DEPLOY.md  compose.yaml  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py
config/: config.yaml
dashboard/: DEMO.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  ProcessingOverlay.tsx  Visualizations.tsx
dashboard/src/demo/: DemoContext.tsx  sampleData.ts  simulator.ts  simulatorPresets.ts
dashboard/src/pages/: AnalysisResult.tsx  Home.tsx  SubmitFinding.tsx
scripts/: build-dashboard.sh  init-db.sql  start-services.sh
src/capa_ai/: __init__.py  config.py  functions.py  main.py  models.py
src/capa_ai/agents/: __init__.py  capa_agent.py  nodes.py  state.py
src/capa_ai/api/: __init__.py  routes.py
src/capa_ai/feedback/: __init__.py  store.py
src/capa_ai/integrations/: __init__.py  outbound.py  webhooks.py
src/capa_ai/llm/: __init__.py  client.py
src/capa_ai/rag/: __init__.py  retriever.py
src/capa_ai/similarity/: __init__.py  engine.py
src/capa_ai/trends/: __init__.py  clustering.py
src/capa_ai/vector_store/: __init__.py  service.py
src/capa_ai/xai/: __init__.py  explainer.py
