[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capa-ai"
version = "0.1.0"
description = "AI-Powered CAPA Management System for PT Bio Farma"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "PT Bio Farma", email = "quality@biofarma.co.id"}
]
keywords = ["capa", "quality", "pharmaceutical", "ai", "gxp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.0.6",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "sentence-transformers>=2.2.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "mlflow>=2.10.0",
    "psycopg2-binary>=2.9.0",
    "qdrant-client>=1.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "cryptography>=42.0.0",
    "httpx>=0.26.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.33",
    "bertopic>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
capa-ai = "capa_ai.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
